# CEG-7570-Project

./: LICENSE  README.md
Common/include/: BayesClassifier.h  DataClass.h  Dataset.h
Common/src/: BayesClassifier.cpp  DataClass.cpp  Dataset.cpp
Data/: BankNoteData.txt  BankNoteDescription.html  SeedsData.txt  SeedsDescription.html
Part1/: CMakeLists.txt  Part1.cpp
Part2/: CMakeLists.txt  Part2.cpp
Part3/: CMakeLists.txt  Part3.cpp
