CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (Part1)

INCLUDE_DIRECTORIES ("${CMAKE_CURRENT_SOURCE_DIR}")
INCLUDE_DIRECTORIES ("${CMAKE_CURRENT_SOURCE_DIR}/../Common/include")

set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/../Common/src/DataClass.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../Common/src/Dataset.cpp
)
 
ADD_EXECUTABLE (Part1 Part1.cpp ${SOURCE})